tests/errors/def_nogil.pyx

def test() nogil:
    pass

_ERRORS = """
2:0: Python function cannot be declared nogil
"""
